@@ -1,3 +1,7 @@
+Thu Oct  5 16:43:59 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>
+
+	* Added omindexer.cc
+
 Thu Oct  5 15:57:30 BST 2000 Chris Emerson <chris.emerson@open.muscat.com>
 
 	* Fixed some #includes.
